ENH: Move ModelMirror module logic into a dedicated Logic sub-directory
Note: The node still need to be registered overloaded RegisterNode() method.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12002 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ModelMirror/CMakeLists.txt
+++ b/Modules/ModelMirror/CMakeLists.txt
@@ -17,11 +17,18 @@ if(NOT Slicer3_SOURCE_DIR)
 endif(NOT Slicer3_SOURCE_DIR)
 
 # --------------------------------------------------------------------------
+# Add subdirectories
+
+ADD_SUBDIRECTORY(Logic)
+
+# --------------------------------------------------------------------------
 # Include dirs
 
 include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
+  ${vtkSlicerModelMirrorModuleLogic_SOURCE_DIR}
+  ${vtkSlicerModelMirrorModuleLogic_BINARY_DIR}
   ${Slicer3_Libs_INCLUDE_DIRS}
   ${Slicer3_Base_INCLUDE_DIRS}
   ${Volumes_SOURCE_DIR}
@@ -44,9 +51,7 @@ install(FILES
 # Sources
 
 set(ModelMirror_SRCS
-  vtkModelMirrorLogic.cxx
   vtkModelMirrorGUI.cxx
-  vtkMRMLModelMirrorNode.cxx
   vtkModelMirrorIcons.cxx
   )
 
@@ -76,6 +81,7 @@ target_link_libraries(${lib_name}
   ${Slicer3_Base_LIBRARIES}
   ${KWWidgets_LIBRARIES}
   ${ITK_LIBRARIES}
+  vtkSlicerModelMirrorModuleLogic
   Volumes
   )
 
