COMP: Add vtkSlicerVolumeModuleLogic dependency to  ChangeTracker, EMSegment, FourDAnalysis, FourDImage and ProstateNav module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12004 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ChangeTracker/CMakeLists.txt
+++ b/Modules/ChangeTracker/CMakeLists.txt
@@ -28,6 +28,8 @@ include_directories(
   ${Slicer3_Base_INCLUDE_DIRS}
   ${vtkTeem_SOURCE_DIR} 
   ${vtkTeem_BINARY_DIR}
+  ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
+  ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
   ${Volumes_SOURCE_DIR}
   ${Volumes_BINARY_DIR}
   # AF: this is needed to wrap the command line module (Linear registration)
@@ -130,7 +132,8 @@ target_link_libraries(${lib_name}
   ${Slicer3_Base_LIBRARIES}
   ${KWWidgets_LIBRARIES} 
   ${ITK_LIBRARIES}
-  vtkTeem 
+  vtkTeem
+  vtkSlicerVolumesModuleLogic
   Volumes
   )
 
