--- a/Modules/ProstateNav/CMakeLists.txt
+++ b/Modules/ProstateNav/CMakeLists.txt
@@ -36,6 +36,8 @@ include_directories(
   ${OpenIGTLinkIF_SOURCE_DIR}
   ${OpenIGTLinkIF_BINARY_DIR}
   ${OpenIGTLink_INCLUDE_DIRS}
+  ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
+  ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
   ${Volumes_SOURCE_DIR}
   ${Volumes_BINARY_DIR}
   )
@@ -155,6 +157,7 @@ target_link_libraries(${lib_name}
   ${KWWidgets_LIBRARIES}
   ${ITK_LIBRARIES}
   OpenIGTLinkIF
+  vtkSlicerVolumesModuleLogic
   Volumes
   )
 
