--- a/Modules/FourDImage/CMakeLists.txt
+++ b/Modules/FourDImage/CMakeLists.txt
@@ -25,6 +25,8 @@ include_directories(
   ${CMAKE_CURRENT_BINARY_DIR}
   ${Slicer3_Libs_INCLUDE_DIRS}
   ${Slicer3_Base_INCLUDE_DIRS}
+  ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
+  ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
   ${Volumes_SOURCE_DIR}
   ${Volumes_BINARY_DIR}
   )
@@ -99,6 +101,7 @@ target_link_libraries(${lib_name}
   ${KWWidgets_LIBRARIES}
   ${ITK_LIBRARIES}
   ${CLP_MODULE}
+  vtkSlicerVolumesModuleLogic
   ${VolumesLib}
   )
 
