COMP: Add vtkSlicerVolumeModuleLogic to FastMArchingSegmentation, MRAblation and ModelMirror
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12007 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/FastMarchingSegmentation/CMakeLists.txt
+++ b/Modules/FastMarchingSegmentation/CMakeLists.txt
@@ -25,6 +25,8 @@ include_directories(
   ${Slicer3_Base_INCLUDE_DIRS}
   ${vtkTeem_SOURCE_DIR} 
   ${vtkTeem_BINARY_DIR}
+  ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
+  ${vtkSlicerVolumesModuleLogic_BINARY_DIR}
   ${Volumes_SOURCE_DIR}
   ${Volumes_BINARY_DIR}
   )
