BUG: don't try to bring up dialog if Tk is not available
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12008 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -40,7 +40,11 @@ proc ShowAndLogError { msg } {
     set autoCloseTimeoutMs 10000 
     puts $msg
     after $autoCloseTimeoutMs {destroy .dialog1}
-    tk_dialog .dialog1 "Error" "$msg" error 0 OK
+    if { [catch "package require Tk"] } {
+      puts "Error: $msg"
+    } else {
+      tk_dialog .dialog1 "Error" "$msg" error 0 OK
+    }
 }
 
 #
