ENH: instead of downloading an external Slicer source tree we will now use the current Source Tree.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12017 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -759,8 +759,8 @@ endif()
 
 ExternalProject_Add(${proj}
   DEPENDS ${slicer_DEPENDENCIES}
-  SVN_REPOSITORY "http://svn.slicer.org/Slicer3/trunk"
-  SOURCE_DIR Slicer3
+  DOWNLOAD_COMMAND ""
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..
   BINARY_DIR Slicer3-build
   CMAKE_GENERATOR ${gen}
   CMAKE_ARGS
