COMP: make python depend on both tcl and tk so that tkinter builds properly.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12019 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -250,7 +250,7 @@ set(out ${python_tkinter})
 set(in ${python_tkinter})
 
 ExternalProject_Add(${proj}
-  DEPENDS tcl
+  DEPENDS tcl tk
   SVN_REPOSITORY "http://svn.python.org/projects/python/branches/release26-maint"
   SOURCE_DIR python-build
   UPDATE_COMMAND ""
