ENH:  Improved installation process for standalone builds.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12022 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DicomToNrrdConverter/CMakeLists.txt
+++ b/Applications/CLI/DicomToNrrdConverter/CMakeLists.txt
@@ -28,5 +28,12 @@ if (Slicer3_SOURCE_DIR)
 
   set(TARGETS ${CLP}Lib ${CLP})
   slicer3_install_plugins(${TARGETS})
-endif (Slicer3_SOURCE_DIR)
+else (Slicer3_SOURCE_DIR)
 
+INSTALL(TARGETS
+  DicomToNrrdConverter
+                 RUNTIME DESTINATION bin
+                 LIBRARY DESTINATION lib
+                 ARCHIVE DESTINATION lib/static)
+
+endif (Slicer3_SOURCE_DIR)
