--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -65,6 +65,11 @@ if { [string match -nocase "windows*" $::tcl_platform(os)] } {
 }
 
 #
+# Indicate if Slicer was build with QT support
+#
+set ::Slicer3_USE_QT "@Slicer3_USE_QT@"
+
+#
 # set up variables for the OS Builds
 # 
 set ::SOLARIS "solaris8"
@@ -158,6 +163,8 @@ if { $installed } {
 
   # TODO -- where will Qt be in the install tree?
   set ::env(QT_LIB_DIR)         $::env(Slicer3_HOME)/lib/Qt
+  # Let's make QT binaries available
+  set ::env(QT_BINARY_DIR)         $::env(Slicer3_HOME)/bin
 
   set ::env(ITK_BIN_DIR)        $::env(Slicer3_HOME)/lib/InsightToolkit
 
@@ -295,6 +302,8 @@ if { $installed } {
   } else {
     set ::env(QT_LIB_DIR)         "$::Slicer3_HOME/bin"
   }
+  # Let's make QT binaries available
+  set ::env(QT_BINARY_DIR) [file normalize "@QT_BINARY_DIR@"]
 
   set ::env(ITK_BIN_DIR)        [file normalize "@ITK_DIR@/bin/$::ITK_BUILD_SUBDIR"]
 
@@ -363,6 +372,7 @@ proc launch_ParseArgs {argv} {
 
   set ::LAUNCH(showSplash) 1
   set ::LAUNCH(launchCommand) ""
+  set ::LAUNCH(launchDesigner) 0
   set ::LAUNCH(detach) 0
 
   # 
@@ -372,6 +382,8 @@ proc launch_ParseArgs {argv} {
   #  --launch-script <script.tcl>
   #    (this is a special case that runs the script
   #     in this interp and then exits)
+  #
+  #  -- designer - Attempt to start Qt Designer
   #
   #  --detach to run the command without monitoring the stdio
   #
@@ -392,6 +404,15 @@ proc launch_ParseArgs {argv} {
           # don't show splash if running a custom command
           set ::LAUNCH(showSplash) 0
       }
+    }
+    "--designer" {
+      if { $::Slicer3_USE_QT != "ON" } {
+        ShowAndLogError "Failed to start Qt Designer - Slicer is *NOT* built with QT Support"
+        exit
+      }
+      set ::LAUNCH(launchDesigner) 1
+      set ::argv [lreplace $::argv 0 1]
+      set ::LAUNCH(showSplash) 0
     }
     "*.slicer" -
     "--launch-script" {
@@ -497,6 +518,8 @@ proc launch_SetPaths {} {
             set ::env(PATH) "$::env(Slicer3_PLUGINS_DIR):$::env(PATH)"
             set ::env(PATH) "$::env(Slicer3_MODULES_DIR):$::env(PATH)"
             set ::env(PATH) "$::env(Slicer3_QTLOADABLEMODULES_DIR):$::env(PATH)"
+            set ::env(PATH) "$::env(QT_BINARY_DIR):$::env(PATH)"
+            set ::env(QTDESIGNER_EXE) "designer"
             set ::env(QT_PLUGIN_PATH) "$::env(Slicer3_QT_PLUGIN_PATH)"
         } elseif {$::env(BUILD) ==  $::DARWIN || $::env(BUILD) == $::DARWIN_X86} { 
             # add vtk, slicer, and tcl bins
@@ -541,6 +564,8 @@ proc launch_SetPaths {} {
             set ::env(PATH) "$::env(Slicer3_PLUGINS_DIR):$::env(PATH)"
             set ::env(PATH) "$::env(Slicer3_MODULES_DIR):$::env(PATH)"
             set ::env(PATH) "$::env(Slicer3_QTLOADABLEMODULES_DIR):$::env(PATH)"
+            set ::env(PATH) "$::env(QT_BINARY_DIR):$::env(PATH)"
+            set ::env(QTDESIGNER_EXE) "Designer.app"
             set ::env(QT_PLUGIN_PATH) "$::env(Slicer3_QT_PLUGIN_PATH)"
         } elseif {$::env(BUILD) == $::WINDOWS} {
             # add vtk, slicer, and tcl bins
@@ -580,6 +605,8 @@ proc launch_SetPaths {} {
             set ::env(Path) $::env(Slicer3_PLUGINS_DIR)\;$::env(Path)
             set ::env(Path) $::env(Slicer3_MODULES_DIR)\;$::env(Path)
             set ::env(Path) $::env(Slicer3_QTLOADABLEMODULES_DIR)\;$::env(Path)
+            set ::env(Path) $::env(QT_BINARY_DIR)\;$::env(Path)
+            set ::env(QTDESIGNER_EXE) "designer.exe"
             set ::env(QT_PLUGIN_PATH) $::env(Slicer3_QT_PLUGIN_PATH)
         } else {
             ShowAndLogError "Libraries: unknown build $::env(BUILD)"
@@ -783,6 +810,16 @@ proc launch_RunProgram {} {
       regsub -all "{|}" $::argv "\\\"" ::argv
     }
 
+    #
+    # If launchDesigner True,
+    # let's update launchCommand with the complete path to Qt Designer
+    #
+    
+    if { $::LAUNCH(launchDesigner)} {
+      set ::LAUNCH(launchCommand) $::env(QT_BINARY_DIR)/$::env(QTDESIGNER_EXE)
+      puts "Starting $::LAUNCH(launchCommand)"
+      puts "Loading plugins from $::env(Slicer3_QT_PLUGIN_PATH)/designer"
+    }
 
     #
     # launch the slicer main script as a sub-process and monitor the output
