ENH: Added function qListToSTLVector and stlVectorToQList to qCTKUtils - Also added Tests
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12041 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qCTKWidgets/Testing/CMakeLists.txt
@@ -21,6 +21,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   qCTKSliderSpinBoxWidgetTest1.cxx
   qCTKTitleComboBoxTest1.cxx
   qCTKTreeComboBoxTest1.cxx
+  qCTKUtilsTest1.cxx
   )
 
 SET (TestsToRun ${Tests})
@@ -62,3 +63,4 @@ SIMPLE_TEST( qCTKSingletonTest1 )
 SIMPLE_TEST( qCTKSliderSpinBoxWidgetTest1 )
 SIMPLE_TEST( qCTKTitleComboBoxTest1 )
 SIMPLE_TEST( qCTKTreeComboBoxTest1 )
+SIMPLE_TEST( qCTKUtilsTest1 )
