ENH: SlicerQT - Added qCTKTestApplication - Wrapper around QApplication allowing to write UI test. (imported from Paraview)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12043 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -58,6 +58,8 @@ SET(qCTKWidgets_SRCS
   qCTKSettings.h
   qCTKSliderSpinBoxWidget.cxx
   qCTKSliderSpinBoxWidget.h
+  qCTKTestApplication.cxx
+  qCTKTestApplication.h
   qCTKTitleComboBox.cxx
   qCTKTitleComboBox.h
   qCTKTreeComboBox.cxx
