--- a/Libs/qVTKWidgets/CMakeLists.txt
+++ b/Libs/qVTKWidgets/CMakeLists.txt
@@ -140,6 +140,7 @@ INSTALL(TARGETS ${lib_name}
 # Testing
 #
 IF(BUILD_TESTING)
+  ADD_SUBDIRECTORY(Testing)
 ENDIF(BUILD_TESTING)
 
 # --------------------------------------------------------------------------
