BUG: SlicerQT - Fix arguments for test qVTKCommandOptionsTest{4, 5}
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12047 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qVTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qVTKWidgets/Testing/CMakeLists.txt
@@ -60,10 +60,15 @@ ADD_TEST( qVTKCommandOptionsTest3 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
 ADD_TEST( qVTKCommandOptionsTest3 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
           qVTKCommandOptionsTest1 --disable-settings --test-if-disablesettings-flag-works )
 
+SET(arg1 "Testing with")
+SET(arg2 " cmake is ")
+SET(arg3 "super awesome !")
+SET(arg4 "CMake rocks !")
+
 ADD_TEST( qVTKCommandOptionsTest4 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
-          qVTKCommandOptionsTest1 --my-list-of-strings Testing\ with \ cmake\ is\  super\ awesome\ !
-          -ms=CMake\ rocks\ ! --test-if-commandline-overwrite-liststring-settings )
+          qVTKCommandOptionsTest1 --my-list-of-strings ${arg1} ${arg2} ${arg3}
+          -ms=${arg4} --test-if-commandline-overwrite-liststring-settings )
 
 ADD_TEST( qVTKCommandOptionsTest5 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
-          qVTKCommandOptionsTest1 -mlos Testing\ with \ cmake\ is\  super\ awesome\ !
-          --my-string=CMake\ rocks\ ! --test-if-commandline-overwrite-liststring-settings )
+          qVTKCommandOptionsTest1 -mlos ${arg1} ${arg2} ${arg3}
+          --my-string=${arg4} --test-if-commandline-overwrite-liststring-settings )
