--- a/vtkSlicerConfigure.h.in
+++ b/vtkSlicerConfigure.h.in
@@ -27,6 +27,7 @@
 #cmakedefine Slicer3_USE_PYTHON
 #cmakedefine Slicer3_USE_OPENTRACKER
 #cmakedefine Slicer3_USE_QT
+#cmakedefine Slicer3_USE_KWWIDGETS
 
 #define VTKSLICER_CONFIGURATION_TYPES "@CMAKE_CONFIGURATION_TYPES@"
 
